[project]
name = "sharehound"
version = "1.0.2"
description = "A Python script to generate a bloodhound opengraph of the rights of shares on a remote Windows machine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "p0dalirius" }
]
dependencies = [
    "argcomplete",
    "impacket>=0.10.0",
    "bhopengraph>=1.1.0",
    "sectools>=1.5.1",
    "pycryptodome>=3.23.0",
    "lark",
    "shareql",
    "rich",
]

[project.scripts]
sharehound="sharehound.__main__:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
